Update usage of SegmentAllocator