@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2022-2023 Overrun Organization
+ * Copyright (c) 2022-2024 Overrun Organization
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -428,7 +428,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getBooleanv(SegmentAllocator allocator, int pname, boolean[] data) {
-        var pData = allocator.allocateArray(JAVA_BOOLEAN, data.length);
+        var pData = allocator.allocate(JAVA_BOOLEAN, data.length);
         getBooleanv(pname, pData);
         RuntimeHelper.toArray(pData, data);
     }
@@ -455,7 +455,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getDoublev(SegmentAllocator allocator, int pname, double[] data) {
-        var pData = allocator.allocateArray(JAVA_DOUBLE, data.length);
+        var pData = allocator.allocate(JAVA_DOUBLE, data.length);
         getDoublev(pname, pData);
         RuntimeHelper.toArray(pData, data);
     }
@@ -491,7 +491,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getFloatv(SegmentAllocator allocator, int pname, float[] data) {
-        var pData = allocator.allocateArray(JAVA_FLOAT, data.length);
+        var pData = allocator.allocate(JAVA_FLOAT, data.length);
         getFloatv(pname, pData);
         RuntimeHelper.toArray(pData, data);
     }
@@ -518,7 +518,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getIntegerv(SegmentAllocator allocator, int pname, int[] data) {
-        var pData = allocator.allocateArray(JAVA_INT, data.length);
+        var pData = allocator.allocate(JAVA_INT, data.length);
         getIntegerv(pname, pData);
         RuntimeHelper.toArray(pData, data);
     }
@@ -547,7 +547,7 @@ public sealed class GL10C permits GL10, GL11C {
     @Nullable
     public static String getString(int name) {
         var pStr = ngetString(name);
-        return RuntimeHelper.isNullptr(pStr) ? null : pStr.getUtf8String(0);
+        return RuntimeHelper.isNullptr(pStr) ? null : pStr.getString(0);
     }
 
     public static void getTexImage(int target, int level, int format, int type, MemorySegment pixels) {
@@ -569,7 +569,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getTexLevelParameterfv(SegmentAllocator allocator, int target, int level, int pname, float[] params) {
-        var pParams = allocator.allocateArray(JAVA_FLOAT, params.length);
+        var pParams = allocator.allocate(JAVA_FLOAT, params.length);
         getTexLevelParameterfv(target, level, pname, pParams);
         RuntimeHelper.toArray(pParams, params);
     }
@@ -596,7 +596,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getTexLevelParameteriv(SegmentAllocator allocator, int target, int level, int pname, int[] params) {
-        var pParams = allocator.allocateArray(JAVA_INT, params.length);
+        var pParams = allocator.allocate(JAVA_INT, params.length);
         getTexLevelParameteriv(target, level, pname, pParams);
         RuntimeHelper.toArray(pParams, params);
     }
@@ -623,7 +623,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getTexParameterfv(SegmentAllocator allocator, int target, int pname, float[] params) {
-        var pParams = allocator.allocateArray(JAVA_FLOAT, params.length);
+        var pParams = allocator.allocate(JAVA_FLOAT, params.length);
         getTexParameterfv(target, pname, pParams);
         RuntimeHelper.toArray(pParams, params);
     }
@@ -650,7 +650,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void getTexParameteriv(SegmentAllocator allocator, int target, int pname, int[] params) {
-        var pParams = allocator.allocateArray(JAVA_INT, params.length);
+        var pParams = allocator.allocate(JAVA_INT, params.length);
         getTexParameteriv(target, pname, pParams);
         RuntimeHelper.toArray(pParams, params);
     }
@@ -758,25 +758,25 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void readPixels(SegmentAllocator allocator, int x, int y, int width, int height, int format, int type, byte[] pixels) {
-        var seg = allocator.allocateArray(JAVA_BYTE, pixels.length);
+        var seg = allocator.allocate(JAVA_BYTE, pixels.length);
         readPixels(x, y, width, height, format, type, seg);
         RuntimeHelper.toArray(seg, pixels);
     }
 
     public static void readPixels(SegmentAllocator allocator, int x, int y, int width, int height, int format, int type, short[] pixels) {
-        var seg = allocator.allocateArray(JAVA_SHORT, pixels.length);
+        var seg = allocator.allocate(JAVA_SHORT, pixels.length);
         readPixels(x, y, width, height, format, type, seg);
         RuntimeHelper.toArray(seg, pixels);
     }
 
     public static void readPixels(SegmentAllocator allocator, int x, int y, int width, int height, int format, int type, int[] pixels) {
-        var seg = allocator.allocateArray(JAVA_INT, pixels.length);
+        var seg = allocator.allocate(JAVA_INT, pixels.length);
         readPixels(x, y, width, height, format, type, seg);
         RuntimeHelper.toArray(seg, pixels);
     }
 
     public static void readPixels(SegmentAllocator allocator, int x, int y, int width, int height, int format, int type, float[] pixels) {
-        var seg = allocator.allocateArray(JAVA_FLOAT, pixels.length);
+        var seg = allocator.allocate(JAVA_FLOAT, pixels.length);
         readPixels(x, y, width, height, format, type, seg);
         RuntimeHelper.toArray(seg, pixels);
     }
@@ -827,19 +827,19 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void texImage1D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int border, int format, int type, byte[] pixels) {
-        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateArray(JAVA_BYTE, pixels));
+        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateFrom(JAVA_BYTE, pixels));
     }
 
     public static void texImage1D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int border, int format, int type, short[] pixels) {
-        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateArray(JAVA_SHORT, pixels));
+        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateFrom(JAVA_SHORT, pixels));
     }
 
     public static void texImage1D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int border, int format, int type, int[] pixels) {
-        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateArray(JAVA_INT, pixels));
+        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateFrom(JAVA_INT, pixels));
     }
 
     public static void texImage1D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int border, int format, int type, float[] pixels) {
-        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateArray(JAVA_FLOAT, pixels));
+        texImage1D(target, level, internalFormat, width, border, format, type, allocator.allocateFrom(JAVA_FLOAT, pixels));
     }
 
     public static void texImage2D(int target, int level, int internalFormat, int width, int height, int border, int format, int type, MemorySegment pixels) {
@@ -852,19 +852,19 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void texImage2D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int height, int border, int format, int type, byte[] pixels) {
-        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateArray(JAVA_BYTE, pixels));
+        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateFrom(JAVA_BYTE, pixels));
     }
 
     public static void texImage2D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int height, int border, int format, int type, short[] pixels) {
-        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateArray(JAVA_SHORT, pixels));
+        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateFrom(JAVA_SHORT, pixels));
     }
 
     public static void texImage2D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int height, int border, int format, int type, int[] pixels) {
-        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateArray(JAVA_INT, pixels));
+        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateFrom(JAVA_INT, pixels));
     }
 
     public static void texImage2D(SegmentAllocator allocator, int target, int level, int internalFormat, int width, int height, int border, int format, int type, float[] pixels) {
-        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateArray(JAVA_FLOAT, pixels));
+        texImage2D(target, level, internalFormat, width, height, border, format, type, allocator.allocateFrom(JAVA_FLOAT, pixels));
     }
 
     public static void texParameterf(int target, int pname, float param) {
@@ -886,7 +886,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void texParameterfv(SegmentAllocator allocator, int target, int pname, float[] params) {
-        texParameterfv(target, pname, allocator.allocateArray(JAVA_FLOAT, params));
+        texParameterfv(target, pname, allocator.allocateFrom(JAVA_FLOAT, params));
     }
 
     public static void texParameteri(int target, int pname, int param) {
@@ -908,7 +908,7 @@ public sealed class GL10C permits GL10, GL11C {
     }
 
     public static void texParameteriv(SegmentAllocator allocator, int target, int pname, int[] params) {
-        texParameteriv(target, pname, allocator.allocateArray(JAVA_INT, params));
+        texParameteriv(target, pname, allocator.allocateFrom(JAVA_INT, params));
     }
 
     public static void viewport(int x, int y, int width, int height) {
